--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,8 @@ h1 {
   padding: 20px;
   border-radius: 5cm 2cm 5cm 2cm;
   border-width: 20px 10px 10px 10px;
+  width: 450px;
+  margin: 20px auto 100px auto;
 }
 
 a {
@@ -58,6 +60,8 @@ a {
   border-radius: 30px;
   padding: 20px;
   margin-bottom: 30px;
+  width: 300px;
+  margin: 20px auto 20px auto;
 }
 
 /* Anchor hover effect */
